syntax = "proto3";

package internalpb;

option go_package = "github.com/tochemey/goakt/v3/internal/internalpb;internalpb";

// HealthCheckRequest
// Sent internally to an actor (or actor system component) to verify that:
//   1. The mailbox is responsive.
//   2. The actor has completed its initialization.
//   3. The actor can accept user messages.
// Empty by design: presence of a valid response implies readiness.
message HealthCheckRequest {}

// HealthCheckResponse
// Returned when an actor (or component) is ready/healthy.
// If a timeout or failure occurs upstream, the absence of this response is
// interpreted as not-ready/unhealthy.
// Extend ONLY if there is a strong need to surface diagnostic details.
message HealthCheckResponse {}
